--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ body {
   width: 100%;
   height: 100%;
   line-height: 1;
-  background: #fff;
+  background: #ffffff;
   font-family: "Open Sans", sans-serif;
   font-size: 20px;
   color: #000;
@@ -149,7 +149,7 @@ body {
   width: 10%;
   text-align: center;
   font-size: 14px;
-  color: #999;
+  color: #999999;
   font-weight: 400;
   line-height: 1.2;
 }
@@ -222,7 +222,7 @@ body {
   -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
           box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   text-transform: none;
-  background: #fff;
+  background: #ffffff;
   border-radius: 0 0 5px 5px;
 }
 
@@ -248,7 +248,7 @@ body {
   font-size: 13px;
   color: #000;
   font-weight: 400;
-  border-bottom: 1px solid #999;
+  border-bottom: 1px solid #999999;
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
 }
@@ -276,7 +276,7 @@ body {
   -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
           box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   text-transform: none;
-  background: #fff;
+  background: #ffffff;
   border-radius: 0 5px 5px 5px;
 }
 
@@ -301,6 +301,93 @@ body {
   transition: all 0.3s ease-out;
 }
 
+.header .container {
+  height: 700px;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  text-align: end;
+  background: url(../assets/img/header-img.jpg) center/cover no-repeat;
+}
+
+.header__title {
+  font-size: 100px;
+  color: #ffcc33;
+  font-weight: 700;
+  font-style: italic;
+  text-shadow: 5px 5px 20px #ffcc33aa;
+  margin: 0 70px;
+}
+
+.header__subtitle {
+  width: 70%;
+  font-size: 22px;
+  color: #ffffff;
+  font-weight: 400;
+  font-style: italic;
+  text-shadow: 5px 5px 20px #ffffffaa;
+  line-height: 1.1;
+  margin: 30px;
+}
+
+.about-us .container {
+  height: 600px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  line-height: 1.4;
+  background: url(../assets/img/lamp-mini.png) left 10% top 10% no-repeat, url(../assets/img/lamp-mini.png) left 40% top 90% no-repeat, url(../assets/img/lamp-mini.png) left 85% top 50% no-repeat;
+}
+
+.about-us__title {
+  font-size: 50px;
+  color: #000;
+  font-weight: 800;
+  text-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1);
+}
+
+.about-us__title span {
+  font-size: 70px;
+  color: #ffcc33;
+  font-weight: 800;
+  font-style: italic;
+  text-shadow: 5px 5px 20px #ffcc33aa;
+}
+
+.about-us__subtitle {
+  font-size: 30px;
+  color: #000;
+  font-weight: 600;
+  margin: 50px 0 20px 0;
+  text-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+}
+
+.about-us__item {
+  position: relative;
+  margin-left: 20px;
+  text-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+}
+
+.about-us__item::before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 4px;
+  left: -20px;
+  width: 5px;
+  height: 8px;
+  border-bottom: 3px solid #ffcc33;
+  border-right: 3px solid #ffcc33;
+  -webkit-transform: rotateZ(40deg);
+          transform: rotateZ(40deg);
+}
+
 .main {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
@@ -320,7 +407,7 @@ body {
   width: 100%;
   height: 300px;
   font-size: 80px;
-  color: #fff;
+  color: #ffffff;
   font-weight: 700;
   text-align: center;
   line-height: 1.1;
@@ -332,7 +419,7 @@ body {
   margin: 15px;
   line-height: 1.3;
   font-size: 20px;
-  color: #333;
+  color: #272727;
   font-weight: 400;
 }
 
@@ -357,14 +444,6 @@ body {
   transition: 0.3s;
 }
 
-.item-block__text:hover::after {
-  width: 100%;
-  left: 0;
-  bottom: 45%;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-}
-
 .item-block__row {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -372,11 +451,15 @@ body {
   -ms-flex-pack: distribute;
       justify-content: space-around;
   margin-top: 30px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .item-block .tile {
   width: 25%;
-  padding: 0 15px;
+  padding: 15px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .item-block .tile__product {
@@ -425,7 +508,7 @@ body {
 
 .item-block .tile__text {
   font-size: 18px;
-  color: #333;
+  color: #272727;
   font-weight: 400;
 }
 
@@ -436,7 +519,7 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin: 50px auto;
+  margin: 40px auto 60px auto;
   border-radius: 5px;
 }
 
@@ -449,7 +532,7 @@ body {
   background: #ffcc33;
   font-family: "Open Sans", sans-serif;
   font-size: 25px;
-  color: #333;
+  color: #272727;
   font-weight: 600;
   border: none;
   border-radius: inherit;
@@ -478,5 +561,32 @@ body {
 
 .cable-sys__title {
   background: url("../assets/img/cable-sys-block-img.jpg") center/cover no-repeat fixed;
+}
+
+.footer {
+  background: #272727;
+}
+
+.footer .container {
+  height: 400px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer__col {
+  height: 60%;
+  width: 25%;
+  padding: 0 20px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-size: 14px;
+  color: #ffffff;
+  font-weight: 400;
+  line-height: 1.3;
 }
 /*# sourceMappingURL=style.css.map */
