--- a/css/style.css
+++ b/css/style.css
@@ -498,65 +498,61 @@ body {
   margin: 30px;
 }
 
-.about-us .container {
-  height: 600px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  line-height: 1.4;
-  background: url(../assets/img/lamp-mini.png) left 10% top 10% no-repeat, url(../assets/img/lamp-mini.png) left 40% top 90% no-repeat, url(../assets/img/lamp-mini.png) left 85% top 50% no-repeat;
+.main {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
 }
 
-.about-us__title {
+.main__title {
+  padding: 20px 15px;
+  font-size: 30px;
+  color: #000;
+  font-weight: 600;
+  position: relative;
+}
+
+.main__title::after {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 15%;
+  bottom: 15%;
+  height: 2px;
+  width: 80%;
+  background: #ffcc33;
+  -webkit-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+}
+
+.welcome-block .container {
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  margin: 50px auto;
+}
+
+.welcome-block .container:hover span {
+  text-shadow: 0 0 100px #ffcc33;
+  -webkit-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+}
+
+.welcome-block__head {
   font-size: 50px;
   color: #000;
   font-weight: 800;
   text-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1);
 }
 
-.about-us__title span {
+.welcome-block__head span {
   font-size: 70px;
   color: #ffcc33;
   font-weight: 800;
   font-style: italic;
   text-shadow: 5px 5px 20px #ffcc33aa;
-}
-
-.about-us__subtitle {
-  font-size: 30px;
-  color: #000;
-  font-weight: 600;
-  margin: 50px 0 20px 0;
-  text-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-}
-
-.about-us__item {
-  position: relative;
-  margin-left: 20px;
-  text-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-}
-
-.about-us__item::before {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 4px;
-  left: -20px;
-  width: 5px;
-  height: 8px;
-  border-bottom: 3px solid #ffcc33;
-  border-right: 3px solid #ffcc33;
-  -webkit-transform: rotateZ(40deg);
-          transform: rotateZ(40deg);
-}
-
-.main {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
+  -webkit-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
 }
 
 .item-block__title {
@@ -570,8 +566,8 @@ body {
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
-  height: 300px;
-  font-size: 80px;
+  height: 200px;
+  font-size: 60px;
   color: #ffffff;
   font-weight: 700;
   text-align: center;
@@ -580,42 +576,12 @@ body {
   text-shadow: 0 0 20px #000;
 }
 
-.item-block__subtitle {
-  margin: 15px;
-  line-height: 1.3;
-  font-size: 20px;
-  color: #272727;
-  font-weight: 400;
-}
-
-.item-block__text {
-  padding: 20px 15px;
-  font-size: 30px;
-  color: #000;
-  font-weight: 600;
-  position: relative;
-}
-
-.item-block__text::after {
-  content: "";
-  display: block;
-  position: absolute;
-  left: 15%;
-  bottom: 15%;
-  height: 2px;
-  width: 80%;
-  background: #ffcc33;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-}
-
 .item-block__row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  margin-top: 30px;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
@@ -684,7 +650,7 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin: 40px auto 60px auto;
+  margin: 20px auto 50px auto;
   border-radius: 5px;
 }
 
@@ -728,6 +694,129 @@ body {
   background: url("../assets/img/cable-sys-block-img.jpg") center/cover no-repeat fixed;
 }
 
+.about-us .container {
+  height: 400px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  line-height: 1.4;
+}
+
+.about-us__title {
+  font-size: 50px;
+  color: #000;
+  font-weight: 800;
+  text-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1);
+}
+
+.about-us__title span {
+  font-size: 70px;
+  color: #ffcc33;
+  font-weight: 800;
+  font-style: italic;
+  text-shadow: 5px 5px 20px #ffcc33aa;
+}
+
+.about-us__subtitle {
+  font-size: 30px;
+  color: #000;
+  font-weight: 600;
+  margin: 50px 0 20px 0;
+  text-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+}
+
+.about-us__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.about-us__item {
+  position: relative;
+  width: 33.333%;
+  padding: 20px 10px 20px 60px;
+}
+
+.about-us__item::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 33%;
+  left: 30px;
+  width: 8px;
+  height: 15px;
+  border-bottom: 5px solid #ffcc33;
+  border-right: 5px solid #ffcc33;
+  -webkit-transform: rotateZ(40deg);
+          transform: rotateZ(40deg);
+}
+
+.contacts .container {
+  height: 600px;
+}
+
+.contacts__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  margin-top: 30px;
+  padding: 0 15px;
+}
+
+.contacts__map {
+  width: 70%;
+}
+
+.contacts__map-google {
+  width: 800px;
+  height: 400px;
+}
+
+.contacts__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.contacts__items {
+  margin: 10px 0;
+}
+
+.contacts__items:first-child {
+  margin-top: 50px;
+}
+
+.contacts__item {
+  font-size: 18px;
+  color: #000;
+  font-weight: 400;
+  line-height: 1.6;
+}
+
+.contacts__item a {
+  font-size: 18px;
+  color: #000;
+  font-weight: 600;
+  -webkit-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+}
+
+.contacts__item a:hover {
+  color: #ffcc33;
+  -webkit-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+}
+
 .footer {
   background: #272727;
 }
@@ -745,26 +834,12 @@ body {
 }
 
 .footer__col {
-  height: 60%;
+  height: 70%;
   width: 25%;
-  padding: 0 20px;
+  padding: 0 10px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   line-height: 1.3;
-}
-
-.footer__logo-link {
-  display: block;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  margin-bottom: 20px;
-}
-
-.footer__logo-subtitle {
-  font-size: 14px;
-  color: #ffffff;
-  font-weight: 400;
 }
 
 .footer__title {
@@ -772,7 +847,7 @@ body {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
-  margin-bottom: 25px;
+  margin-bottom: 30px;
   font-size: 22px;
   color: #ffffff;
   font-weight: 400;
@@ -793,7 +868,7 @@ body {
   width: -moz-fit-content;
   width: fit-content;
   padding: 5px;
-  font-size: 16px;
+  font-size: 14px;
   color: #ffffff;
   font-weight: 400;
   text-transform: uppercase;
@@ -817,7 +892,7 @@ body {
 }
 
 .footer__row:first-child {
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .footer__item {
@@ -863,7 +938,7 @@ body {
   height: 40px;
   border-radius: 50%;
   background: #ffffff;
-  font-size: 24px;
+  font-size: 22px;
   color: #272727;
   font-weight: 400;
   -webkit-transition: all 0.3s ease-out;
@@ -874,10 +949,44 @@ body {
   -webkit-transform: scale(1.2);
           transform: scale(1.2);
   background: #ffcc33;
+  color: #ffffff;
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
 }
 
 .footer__map-img {
   background: url(../assets/img/map-img.png) center/cover no-repeat;
+}
+
+.footer-bottom {
+  background: #272727;
+  border-top: 1px solid #484848;
+}
+
+.footer-bottom .container {
+  background: #272727;
+  height: 60px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 0 15px;
+}
+
+.footer-bottom__copyright {
+  font-size: 12px;
+  color: #ffffff;
+  font-weight: 400;
+}
+
+.footer-bottom__logo {
+  display: block;
+  height: 100%;
+  padding: 5px;
 }
